--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abdullah Rashid - Digital Marketer</title>
-    <!-- Tailwind CSS CDN for styling -->
-    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Vite will inject the build output here during the build process -->
+    <!-- The following script tag is a placeholder for the bundled JavaScript -->
+    <script type="module" src="/src/main.jsx"></script>
     <style>
         /* This CSS ensures a smooth scrolling experience for anchor links */
         html {
@@ -16,8 +17,6 @@
 <body class="bg-neutral-950">
     <!-- The root div where the React application will be rendered -->
     <div id="root"></div>
-
-    <!-- The React app will be injected here by index.js -->
-    <!-- Note: In a real-world project, a build tool like Vite or Create React App handles this for you -->
 </body>
 </html>
+
