--- a/index.html
+++ b/index.html
@@ -1,22 +1,17 @@
 <!DOCTYPE html>
-<html lang="ar">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Abdullah Rashid - Digital Marketer</title>
-    <!-- Vite will inject the build output here during the build process -->
-    <!-- The following script tag is a placeholder for the bundled JavaScript -->
-    <script type="module" src="/src/main.jsx"></script>
-    <style>
-        /* This CSS ensures a smooth scrolling experience for anchor links */
-        html {
-            scroll-behavior: smooth;
-        }
-    </style>
-</head>
-<body class="bg-neutral-950">
-    <!-- The root div where the React application will be rendered -->
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Abdullah Rashid Portfolio</title>
+  </head>
+  <body>
     <div id="root"></div>
-</body>
+    <!-- The script tag below points to the entry point of your React application -->
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
+
+
 
