--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -6,12 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Abdullah Rashid Portfolio</title>
   </head>
-  <body>
+  <body class="bg-neutral-950 text-white">
     <div id="root"></div>
-    <!-- The script tag below points to the entry point of your React application -->
+    <!-- Make sure this path points to the main.jsx file -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
-
-
-
