--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Abdullah Rashid Portfolio</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Abdullah Rashid | Portfolio</title>
   </head>
-  <body class="bg-neutral-950 text-white">
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!-- Make sure this path points to the main.jsx file -->
-    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
