--- a/public/index.html
+++ b/public/index.html
@@ -252,4 +252,4 @@
                         </SectionWrapper>
 
                         <SectionWrapper ref={sectionRefs.skills} id="skills" title="Skills & Expertise">
-                            <div className="flex flex-wrap justify-center gap-3 max-w-4xl
+                            <div className="flex flex-wrap justify-center gap-3 max-w-4
